cleanup generics